update logstash configuration

--- a/logstash-json.conf
+++ b/logstash-json.conf
@@ -8,7 +8,7 @@ input {
 
 filter {
   grok {
-    match => [ "[headers][request_uri]", "%{URIPARAM:url}" ]
+    match => [ "[headers][request_path]", "%{URIPARAM:url}" ]
     remove_field => ["headers"]
   }
 
