Exlusive list of keys to index + try to convert duration to float

--- a/logstash.conf
+++ b/logstash.conf
@@ -20,6 +20,13 @@ filter {
 
   kv {
     source => "message"
+    include_keys => [ "class", "status", "path", "method", "host", "container", "duration" ]
+  }
+
+  mutate {
+    convert => {
+      "duration" => "float"
+    }
   }
 
 }
